[WIP] feat: use handler

--- a/roles/jpdns/tasks/main.yml
+++ b/roles/jpdns/tasks/main.yml
@@ -4,6 +4,8 @@
     path: /etc/systemd/resolved.conf
     regexp: "^DNS=.*$"
     replace: "DNS=10.0.0.1 10.16.0.2"
+  notify:
+   -リゾルバの再起動
 - name: リゾルバの再起動
   systemd:
     name: systemd-resolved.service
